<resources>
    <string name="app_name">PetShop</string>
    <string name="pet_price">%1$.2f %2$s</string>
    <string name="animal_type_placeholder">Animal Type</string>
    <string name="animal_age_placeholder">Animal age</string>
    <string name="animal_name_placeholder">Animal Name</string>
    <string name="btn_photo_placeholder">Photo</string>
    <string name="btn_animals_placeholder">Animals</string>
    <string name="gallery">Gallery</string>
    <string name="animals">Animals</string>
    <string name="place_holder_text">Place Holder Text</string>
    <string name="details_place_holder">Lorem ipsum dolor sit amet, consectetur elit adipiscing, sed do eiusmod tempor ut labore incididunt et dolore magna aliqua.</string>
    <string name="add_pet">Add Pet!</string>
    <string name="pet_name">Pet Name</string>
    <string name="pet_age">Pet Age</string>
    <string name="pet_type">Pet Type</string>
    <string name="pet_details">Pet Details</string>
    <string name="pet_price_string">Pet Price</string>
    <string name="image_url">Image URL</string>
</resources>
